@@ -61,7 +61,6 @@ Wishlist
 - Enable flagging of articles in unified view (with contextual menu?).
 - Preference to expire unread articles as well as read articles.
 - Check for internet connection before checking for new articles.
-- Single-key keyboard shortcut for Next Unread.
 - Filter articles by flagged.
 - Add support for "enclosure" field in RSS.
 - Hold down option key (or other combo) while pressing mark all read button to mark all subscriptions read.
